chore!(collections): updates collections API to use ID and not UUID for authenticated mutations
