# server/api/users/[user_id]/collections/[collection_id]/index.patch.ts
@@ -1,20 +1,21 @@
 import { InsertTemplateCollectionSchema } from '~/lib/types/database.tables/schema'
 import { updateTemplateCollection } from '~/server/database/repositories/userTemplateCollections'
+import { validateParamCollectionId } from '~/server/utils/validate'
 
 export default defineEventHandler(async (event) => {
   /* VALIDATE PARAMS */
-  const maybeCollectionUuid = await validateParamCollectionUuid(event)
-  if (maybeCollectionUuid.statusCode !== 200) {
+  const maybeCollectionId = await validateParamCollectionId(event)
+  if (maybeCollectionId.statusCode !== 200) {
     return sendError(
       event,
       createError({
-        statusCode: maybeCollectionUuid.statusCode,
-        statusMessage: maybeCollectionUuid.statusMessage,
-        data: maybeCollectionUuid.data,
+        statusCode: maybeCollectionId.statusCode,
+        statusMessage: maybeCollectionId.statusMessage,
+        data: maybeCollectionId.data,
       }),
     )
   }
-  const { user_id, uuid } = maybeCollectionUuid.data
+  const { user_id, collection_id } = maybeCollectionId.data
 
   /* VALIDATE BODY */
   const body = await readValidatedBody(event, (body) => {
@@ -34,7 +35,7 @@ export default defineEventHandler(async (event) => {
 
   try {
     const collection = await updateTemplateCollection(
-      uuid,
+      collection_id,
       {
         ...body.data,
         neptun_user_id: user_id,
